syntax = "proto3";
package product;
option  go_package="./;product";

message productReq{
    string name=1;
    float  price=2;
}
message productRes{
    string name=1;
    float  price=2;
}
service  SearchService{
    rpc Search(productReq) returns(productRes);
    rpc SearchIn(stream productReq) returns(productRes);
    rpc SearchOut(productReq) returns(stream productRes);
    rpc SearchIO(stream productReq) returns (stream productRes);

}